# LUAnalyse

./: AST.hs  LUAnalyse.cabal  LuaTypes_Draft.hs  README.md  TypingRules.md  compile.sh  serialise-ast.sh  test.lua
docs/: documentation.tex  operations.txt
examples/: assignments.lua  control structures.lua  loop.lua  scoping.lua  shortcut.lua  table.lua
src/: Main.hs  Utility.hs
src/Data/: PartitionedSet.hs
src/LUAnalyse/: Parser.hs
src/LUAnalyse/Analysis/: Constants.hs
src/LUAnalyse/Analysis/SoftTyping/: Analysis.hs  Types.hs
src/LUAnalyse/ControlFlow/: Flow.hs  Formatter.hs  Generator.hs  State.hs
src/LUAnalyse/Framework/: Framework.hs  Lattice.hs
src/LUAnalyse/Parser/: AST.hs  Deserialise.hs  Parser.hs
src/LUAnalyse/Parser/LuaParser/: SerialiseAST.lua
