name:               LUAnalyse
version:            0.1
synopsis:           Soft-typing analysis for Lua programs
license:            AllRightsReserved
author:             Gerben van Veenendaal, Tom Tervoort, Stijn van Drongelen
build-type:         Simple
cabal-version:      >=1.10

executable LUAnalyse
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:
    base >= 4.6 && < 5,
    containers,
    directory ==1.2.*,
    process ==1.1.*,
    syb ==0.4.*,
    mtl ==2.1.*,
    data-lens,
    data-lens-template
  hs-source-dirs:   src
  ghc-options:      -Wall
